# pyroll-from-dict

./: README.md  hatch.toml  pyproject.toml
pyroll/from_dict/: __init__.py  config.py  explicit_functions.py  from_dict.py  resolve.py  schema.py
pyroll/input_text/: __init__.py  config.py  from_dict.py  resolve_factory.py
tests/: conf.py  input.json  input.schema.json  profile.json  profile.schema.json  roll_pass.json  roll_pass.schema.json  roll_pass2.json  roll_pass2.schema.json  roll_pass3.json  roll_pass3.schema.json  test_from_dict.py  test_functions.py  test_resolve.py  test_resolve_factory.py  test_schema.py
