[project]
name = "pyroll-from-dict" # insert the name of yout plugin here
description = "Extension for PyRolL providing function to create PyRolL data structure from dictionaries."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause" # may be changed to your wishes
requires-python = ">=3.9, <4.0"

dependencies = [
    "pyroll-core ~= 3.0",
    "schema ~= 0.7",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pyroll.readthedocs.io"
Repository = "https://github.com/pyroll-project/pyroll-from-dict"
Documentation = "https://github.com/pyroll-project/pyroll-from-dict/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
